add layout to linkedin page

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 
 
-          <!-- Rad 1 -->
+          <!-- Rad -->
           <div class="main__box-rows main__box-rows-1">
             <div class="main__box-card sammanfattning">
               <h6 class="main__box-title">Sammanfattning</h6>
@@ -233,99 +233,6 @@
               <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
             </div>
           </div>
-
-          <!-- Rad 2 -->
-          <!-- <div class="main__box-rows main__box-rows-2">
-            <div class="main__box-card linkedin">
-              <h6 class="main__box-title">Linkedin</h6>
-              <h3 class="main__box-content"> 12%
-              </h3>
-              <h6 class="main__box-subheader">Lorem ipsum dolor</h6>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
-            </div>
-            <div class="main__box-card Instagram">
-
-              <h6 class="main__box-title">Instagram</h6>
-              <h3 class="main__box-content">12%
-              </h3>
-              <h6 class="main__box-subheader">Lorem ipsum dolor</h6>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
-            </div>
-
-            <div class="main__box-card facebook">
-
-              <h6 class="main__box-title">Facebook</h6>
-              <h3 class="main__box-content"> 12%
-              </h3>
-              <h6 class="main__box-subheader">Lorem ipsum dolor</h6>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
-            </div>
-          </div> -->
-
-
-
-          <!-- Rad 3 -->
-          <!-- <div class="main__box-rows main__box-rows-3">
-            <div class="main__box-card enheter">
-              <h6 class="main__box-title">Enheter</h6>
-
-              <div class="enheter__container">
-                <div class="dator">
-                  <svg width="59" height="51" viewBox="0 0 59 51" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_6_437)">
-                      <path
-                        d="M53.1814 0.100922H4.8542C2.18614 0.100922 0.0214844 2.20053 0.0214844 4.78842V36.0384C0.0214844 38.6263 2.18614 40.7259 4.8542 40.7259H24.1851L22.5742 45.4134H15.3251C13.986 45.4134 12.9087 46.4583 12.9087 47.7572C12.9087 49.056 13.986 50.1009 15.3251 50.1009H42.7105C44.0496 50.1009 45.1269 49.056 45.1269 47.7572C45.1269 46.4583 44.0496 45.4134 42.7105 45.4134H35.4614L33.8505 40.7259H53.1814C55.8495 40.7259 58.0141 38.6263 58.0141 36.0384V4.78842C58.0141 2.20053 55.8495 0.100922 53.1814 0.100922ZM51.5705 34.4759H6.46511V6.35092H51.5705V34.4759Z"
-                        fill="#1CC38B" />
-                    </g>
-                    <defs>
-                      <clipPath id="clip0_6_437">
-                        <rect width="58" height="50" fill="white" transform="translate(0.0175781 0.100922)" />
-                      </clipPath>
-                    </defs>
-                  </svg>
-                  <h3 class="main__box-content">
-                    39%
-
-                  </h3>
-
-                  <svg width="38" height="38" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M2.5721 36.8197L2.5721 25.0697C2.5721 24.4854 2.80422 23.925 3.21738 23.5118C3.63055 23.0987 4.19092 22.8666 4.77522 22.8666C5.35953 22.8666 5.9199 23.0987 6.33307 23.5118C6.74624 23.925 6.97835 24.4854 6.97835 25.0697L6.97835 31.4955L20.8415 17.6305C21.0462 17.4251 21.2894 17.2621 21.5572 17.1509C21.825 17.0397 22.1121 16.9825 22.4021 16.9825C22.692 16.9825 22.9791 17.0397 23.2469 17.1509C23.5147 17.2621 23.7579 17.4251 23.9626 17.6305L29.744 23.4173L41.404 11.761C41.8179 11.3471 42.3792 11.1146 42.9646 11.1146C43.5499 11.1146 44.1112 11.3471 44.5251 11.761C44.939 12.1748 45.1715 12.7362 45.1715 13.3215C45.1715 13.9068 44.939 14.4682 44.5251 14.8821L31.3064 28.1008C31.1017 28.3062 30.8585 28.4692 30.5907 28.5804C30.3229 28.6916 30.0358 28.7488 29.7458 28.7488C29.4558 28.7488 29.1687 28.6916 28.9009 28.5804C28.6332 28.4692 28.3899 28.3062 28.1853 28.1008L22.4002 22.3158L10.0994 34.6165L16.5252 34.6165C17.1095 34.6165 17.6699 34.8487 18.0831 35.2618C18.4962 35.675 18.7283 36.2354 18.7283 36.8197C18.7283 37.404 18.4962 37.9644 18.0831 38.3775C17.6699 38.7907 17.1095 39.0228 16.5252 39.0228L4.77522 39.0228C4.19092 39.0228 3.63055 38.7907 3.21738 38.3775C2.80422 37.9644 2.5721 37.404 2.5721 36.8197Z"
-                      fill="#B71C1C" />
-                  </svg>
-
-                </div>
-
-                <div class="mobil">
-                  <svg width="31" height="51" viewBox="0 0 31 51" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M24.4864 0.367523H6.25151C4.7402 0.367523 3.29078 0.967889 2.22213 2.03655C1.15347 3.10521 0.553101 4.55462 0.553101 6.06593V44.8151C0.553101 46.3264 1.15347 47.7758 2.22213 48.8445C3.29078 49.9132 4.7402 50.5135 6.25151 50.5135H24.4864C25.9977 50.5135 27.4471 49.9132 28.5158 48.8445C29.5845 47.7758 30.1848 46.3264 30.1848 44.8151V6.06593C30.1848 4.55462 29.5845 3.10521 28.5158 2.03655C27.4471 0.967889 25.9977 0.367523 24.4864 0.367523ZM15.369 48.2342C13.4771 48.2342 11.9499 46.707 11.9499 44.8151C11.9499 42.9232 13.4771 41.3961 15.369 41.3961C17.2608 41.3961 18.788 42.9232 18.788 44.8151C18.788 46.707 17.2608 48.2342 15.369 48.2342ZM25.6261 39.1167H5.11183V7.20561H25.6261V39.1167Z"
-                      fill="#1CC38B" />
-                  </svg>
-
-                  <h3 class="main__box-content">
-                    61%
-
-                  </h3>
-                  <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M45.5256 10.9813V22.7313C45.5256 23.3156 45.2934 23.876 44.8803 24.2891C44.4671 24.7023 43.9067 24.9344 43.3224 24.9344C42.7381 24.9344 42.1778 24.7023 41.7646 24.2891C41.3514 23.876 41.1193 23.3156 41.1193 22.7313V16.3055L27.2561 30.1705C27.0515 30.3759 26.8083 30.5389 26.5405 30.65C26.2727 30.7612 25.9856 30.8185 25.6956 30.8185C25.4056 30.8185 25.1185 30.7612 24.8507 30.65C24.5829 30.5389 24.3397 30.3759 24.135 30.1705L18.3537 24.3836L6.69364 36.04C6.27976 36.4539 5.71841 36.6864 5.13309 36.6864C4.54778 36.6864 3.98643 36.4539 3.57255 36.04C3.15866 35.6261 2.92615 35.0648 2.92615 34.4794C2.92615 33.8941 3.15866 33.3328 3.57255 32.9189L16.7913 19.7001C16.996 19.4948 17.2392 19.3318 17.507 19.2206C17.7748 19.1094 18.0619 19.0522 18.3518 19.0522C18.6418 19.0522 18.9289 19.1094 19.1967 19.2206C19.4645 19.3318 19.7077 19.4948 19.9124 19.7001L25.6974 25.4852L37.9982 13.1844H31.5724C30.9881 13.1844 30.4278 12.9523 30.0146 12.5391C29.6014 12.126 29.3693 11.5656 29.3693 10.9813C29.3693 10.397 29.6014 9.8366 30.0146 9.42343C30.4278 9.01027 30.9881 8.77815 31.5724 8.77815H43.3224C43.9067 8.77815 44.4671 9.01027 44.8803 9.42343C45.2934 9.8366 45.5256 10.397 45.5256 10.9813Z"
-                      fill="#1CC38B" />
-                  </svg>
-
-
-
-                </div>
-              </div>
-            </div>
-            <div class="main__box-card geo">
-
-              <h6 class="main__box-title">Geografi</h6>
-              <h5 class="main__box-content">Klick 12% <br>
-                Visningar 8%</h5>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
-            </div>
-          </div> -->
 
         </div>
 
