--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li class="active">
             <a href="/index.html" aria-current="page">
               <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M20.0364 18.7522H3.53638V11.0856L11.7864 2.93973L20.0364 11.0856V18.7522Z" fill="#E8EAF6" />
+                <path d="M20.0364 18.7522h2.53638V11.0856L11.7864 2.93973L20.0364 11.0856V18.7522Z" fill="#E8EAF6" />
                 <path
                   d="M18.6614 10.1272L16.3697 7.73139V4.37723H18.6614V10.1272ZM3.53638 18.7522H20.0364V21.1481H3.53638V18.7522Z"
                   fill="#C5CAE9" />
@@ -44,7 +44,7 @@
                 <path
                   d="M13.3905 17.0751C13.253 17.0751 13.1614 17.171 13.1614 17.3147V18.2731C13.1614 18.4168 13.253 18.5126 13.3905 18.5126C13.528 18.5126 13.6197 18.4168 13.6197 18.2731V17.3147C13.6197 17.171 13.528 17.0751 13.3905 17.0751Z"
                   fill="#FF8A65" />
-              </svg> Start
+              </svg> <span>Start</span>
             </a>
           </li>
           <li>
@@ -63,7 +63,9 @@
                     <rect width="19" height="19" fill="white" transform="translate(0.380371 0.574387)" />
                   </clipPath>
                 </defs>
-              </svg> LinkedIn</a>
+              </svg> <span>LinkedIn</span>
+
+            </a>
           </li>
           <li>
             <a href="/instagramPage.html"><svg width="19" height="19" viewBox="0 0 19 19" fill="none"
@@ -98,7 +100,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              Instagram</a>
+              <span>Instagram</span></a>
           </li>
           <li>
             <a href="/facebookPage.html"><svg width="21" height="21" viewBox="0 0 21 21" fill="none"
@@ -117,7 +119,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              Facebook</a>
+              <span>Facebook</span></a>
           </li>
 
         </ul>
