--- a/linkedinPage.html
+++ b/linkedinPage.html
@@ -38,7 +38,7 @@
                                 <path
                                     d="M13.3905 17.0751C13.253 17.0751 13.1614 17.171 13.1614 17.3147V18.2731C13.1614 18.4168 13.253 18.5126 13.3905 18.5126C13.528 18.5126 13.6197 18.4168 13.6197 18.2731V17.3147C13.6197 17.171 13.528 17.0751 13.3905 17.0751Z"
                                     fill="#FF8A65" />
-                            </svg> Start
+                            </svg> <span>Start</span>
                         </a>
                     </li>
                     <li class="active">
@@ -58,7 +58,9 @@
                                             transform="translate(0.380371 0.574387)" />
                                     </clipPath>
                                 </defs>
-                            </svg> LinkedIn</a>
+                            </svg> <span>LinkedIn</span>
+
+                        </a>
                     </li>
                     <li>
                         <a href="/instagramPage.html"><svg width="19" height="19" viewBox="0 0 19 19" fill="none"
@@ -96,7 +98,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            Instagram</a>
+                            <span>Instagram</span></a>
                     </li>
                     <li>
                         <a href="/facebookPage.html"><svg width="21" height="21" viewBox="0 0 21 21" fill="none"
@@ -116,7 +118,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            Facebook</a>
+                            <span>Facebook</span></a>
                     </li>
 
                 </ul>
@@ -134,12 +136,12 @@
 
 
                     <!-- Rad -->
-                    <div class="submain__box-rows submain__box-rows-1">
+                    <div class="submain__box-rows">
 
                         <!-- Rad 1 -->
                         <div class="submain__box-card antal-foljare">
                             <h6 class="submain__box-title">Antal följare</h6>
-                            <h2 id="antal-foljare" class="submain__box-content"> 55K
+                            <h2 id="antal-foljare" class="submain__box-content center-text"> 55K
                             </h2>
                             <h6 class="submain__box-subheader">Lorem ipsum dolor</h6>
                             <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
@@ -147,7 +149,7 @@
                         <div class="submain__box-card nya-foljare">
 
                             <h6 class="submain__box-title">Nya följare</h6>
-                            <h2 id="nya-foljare" class="submain__box-content">950
+                            <h2 id="nya-foljare" class="submain__box-content center-text">950
                             </h2>
                             <h6 class="submain__box-subheader">Lorem ipsum dolor</h6>
                             <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
@@ -156,7 +158,7 @@
                         <div class="submain__box-card okning-foljare">
 
                             <h6 class="submain__box-title">Ökning av följare</h6>
-                            <h2 id="okning-foljare" class="submain__box-content"> 1.2%
+                            <h2 id="okning-foljare" class="submain__box-content center-text"> 1.2%
                             </h2>
                             <h6 class="submain__box-subheader">Lorem ipsum dolor</h6>
                             <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
@@ -197,9 +199,9 @@
                         </div>
                         <div class="submain__box-card basta-inlagg">
                             <h6 class="submain__box-title">Bästa inlägg</h6>
-                            <h4 id="basta-inlagg" class="submain__box-content">900 klick <br>
-                                1200 visningar</h5>
-                                <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <h4 id="basta-inlagg" class="submain__box-content">
+                            </h4>
+                            <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
                         </div>
 
 
@@ -217,10 +219,9 @@
                         <div class="submain__box-card klick-inlagg">
 
                             <h6 class="submain__box-title">Klick på inlägg</h6>
-                            <h4 id="klick-inlagg" class="submain__box-content">4000 Klick <br>
-                                <h4 id="klick-inlagg-change" class="submain__box-content">
-                                    8%</h5>
-                                    <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <h4 id="klick-inlagg" class="submain__box-content">
+                            </h4>
+                            <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
                         </div>
                     </div>
 
