--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 
             <div class="main__box-card sammanfattning">
-              <h6 class="main__box-title">Sammanfattning</h6>
+              <h6 class="main__box-title">Summering</h6>
               <h5 class="main__box-content center-text" id="total-sammanfattning"></h5>
               <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
             </div>
