fix start icon & logo link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <div class="sidebar">
 
       <figure class="logo">
-        <img src="/assets/images/logo.png" alt="">
+        <a href="/index.html">
+          <img src="/assets/images/logo.png" alt="">
+
+        </a>
       </figure>
 
       <nav>
