--- a/linkedinPage.html
+++ b/linkedinPage.html
@@ -16,29 +16,34 @@
         <div class="sidebar">
 
             <figure class="logo">
-                <img src="/assets/images/logo.png" alt="">
+                <a href="/index.html">
+                    <img src="/assets/images/logo.png" alt="">
+
+                </a>
             </figure>
 
             <nav>
                 <ul class="nav-list">
                     <li>
                         <a href="/index.html">
-                            <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
+                            <svg width="19" height="20" viewBox="0 0 19 20" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
-                                <path d="M20.0364 18.7522h2.53638V11.0856L11.7864 2.93973L20.0364 11.0856V18.7522Z"
+                                <path d="M18.0833 17.5035H1.58325V9.8368L9.83325 1.69096L18.0833 9.8368V17.5035Z"
                                     fill="#E8EAF6" />
                                 <path
-                                    d="M18.6614 10.1272L16.3697 7.73139V4.37723H18.6614V10.1272ZM3.53638 18.7522H20.0364V21.1481H3.53638V18.7522Z"
+                                    d="M16.7083 8.87846L14.4166 6.48263V3.12846H16.7083V8.87846ZM1.58325 17.5035H18.0833V19.8993H1.58325V17.5035Z"
                                     fill="#C5CAE9" />
                                 <path
-                                    d="M11.7864 2.12514L2.61975 11.0376L3.53642 12.0918L11.7864 4.08972L20.0364 12.0918L20.9531 11.0376L11.7864 2.12514Z"
+                                    d="M9.83329 0.876373L0.666626 9.78887L1.58329 10.843L9.83329 2.84096L18.0833 10.843L19 9.78887L9.83329 0.876373Z"
                                     fill="#B71C1C" />
-                                <path d="M9.03638 13.4814H14.5364V21.1481H9.03638V13.4814Z" fill="#D84315" />
-                                <path d="M10.4114 8.21056H13.1614V11.0856H10.4114V8.21056Z" fill="#01579B" />
+                                <path d="M7.08325 12.2326H12.5833V19.8993H7.08325V12.2326Z" fill="#D84315" />
+                                <path d="M8.45825 6.96179H11.2083V9.83679H8.45825V6.96179Z" fill="#01579B" />
                                 <path
-                                    d="M13.3905 17.0751C13.253 17.0751 13.1614 17.171 13.1614 17.3147V18.2731C13.1614 18.4168 13.253 18.5126 13.3905 18.5126C13.528 18.5126 13.6197 18.4168 13.6197 18.2731V17.3147C13.6197 17.171 13.528 17.0751 13.3905 17.0751Z"
+                                    d="M11.4374 15.8264C11.2999 15.8264 11.2083 15.9222 11.2083 16.066V17.0243C11.2083 17.1681 11.2999 17.2639 11.4374 17.2639C11.5749 17.2639 11.6666 17.1681 11.6666 17.0243V16.066C11.6666 15.9222 11.5749 15.8264 11.4374 15.8264Z"
                                     fill="#FF8A65" />
-                            </svg> <span>Start</span>
+                            </svg>
+
+                            <span>Start</span>
                         </a>
                     </li>
                     <li class="active">
