add copy to boxes

--- a/index.html
+++ b/index.html
@@ -146,27 +146,27 @@
 
             <div class="main__box-card linkedin">
               <h6 class="main__box-title">Linkedin</h6>
-              <h3 class="main__box-content center-text" id="total-linkedin">
-              </h3>
-              <h6 class="main__box-subheader">Lorem ipsum dolor</h6>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+              <h2 class="main__box-content center-text" id="total-linkedin">
+              </h2>
+              <h6 class="main__box-subheader">Engagemangsgrad för Linkedin</h6>
+              <p class="main__box-text">Jämfört med föregående 14 dagar. </p>
             </div>
             <div class="main__box-card instagram">
 
               <h6 class="main__box-title">Instagram</h6>
-              <h3 class="main__box-content center-text" id="total-instagram">
-              </h3>
-              <h6 class="main__box-subheader">Lorem ipsum dolor</h6>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+              <h2 class="main__box-content center-text" id="total-instagram">
+              </h2>
+              <h6 class="main__box-subheader">Engagemangsgrad för Instagram</h6>
+              <p class="main__box-text">Jämfört med föregående 14 dagar. </p>
             </div>
 
             <div class="main__box-card facebook">
 
               <h6 class="main__box-title">Facebook</h6>
-              <h3 class="main__box-content center-text" id="total-facebook">
-              </h3>
-              <h6 class="main__box-subheader">Lorem ipsum dolor</h6>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+              <h2 class="main__box-content center-text" id="total-facebook">
+              </h2>
+              <h6 class="main__box-subheader">Engagemangsgrad för Facebook</h6>
+              <p class="main__box-text">Jämfört med föregående 14 dagar. </p>
             </div>
 
 
@@ -175,7 +175,7 @@
             <div class="main__box-card sammanfattning">
               <h6 class="main__box-title">Summering</h6>
               <h5 class="main__box-content center-text" id="total-sammanfattning"></h5>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+              <p class="main__box-text">Statistiken gäller föregående 14 dagar. </p>
             </div>
 
 
@@ -208,7 +208,7 @@
                 </div>
 
               </div>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+              <p class="main__box-text">Fördelning mellan olika enheter för dina följare.</p>
             </div>
 
 
@@ -220,7 +220,7 @@
 
               <h6 class="main__box-title">Trender</h6>
               <h5 class="main__box-content center-text" id="sammanfattning-trender"></h5>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+              <p class="main__box-text">Statistiken gäller föregående 14 dagar. </p>
             </div>
 
 
@@ -228,7 +228,7 @@
 
               <h6 class="main__box-title">Geografi</h6>
               <h5 class="main__box-content" id="geo"></h5>
-              <p class="main__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+              <p class="main__box-text">Länder som dina följare kommer ifrån.</p>
             </div>
           </div>
 
