--- a/facebookPage.html
+++ b/facebookPage.html
@@ -133,7 +133,7 @@
         <main class="submain">
 
             <div class="submain__inner">
-                <h1 class="submain__title">Facebook</h1>
+                <h1 class="submain__title">Linkedin</h1>
 
                 <div class="submain__box-container">
 
@@ -147,16 +147,18 @@
                             <h6 class="submain__box-title">Antal följare</h6>
                             <h2 id="antal-foljare" class="submain__box-content center-text"> 55K
                             </h2>
-                            <h6 class="submain__box-subheader">Lorem ipsum dolor</h6>
-                            <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <h6 class="submain__box-subheader">Totala antalet följare</h6>
+                            <p class="submain__box-text">Jämfört med föregående 14 dagar.
+                            </p>
                         </div>
                         <div class="submain__box-card nya-foljare">
 
                             <h6 class="submain__box-title">Nya följare</h6>
                             <h2 id="nya-foljare" class="submain__box-content center-text">950
                             </h2>
-                            <h6 class="submain__box-subheader">Lorem ipsum dolor</h6>
-                            <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <h6 class="submain__box-subheader">Antal nya följare</h6>
+                            <p class="submain__box-text">Jämfört med föregående 14 dagar.
+                            </p>
                         </div>
 
                         <div class="submain__box-card okning-foljare">
@@ -164,8 +166,8 @@
                             <h6 class="submain__box-title">Ökning av följare</h6>
                             <h2 id="okning-foljare" class="submain__box-content center-text"> 1.2%
                             </h2>
-                            <h6 class="submain__box-subheader">Lorem ipsum dolor</h6>
-                            <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <h6 class="submain__box-subheader">Ökar ditt antal följare?</h6>
+                            <p class="submain__box-text">Jämfört med föregående 14 dagar. </p>
                         </div>
 
                         <!-- Rad 2 -->
@@ -189,7 +191,7 @@
 
 
                                     <h2 class="submain__box-content">
-                                        61%
+
 
                                     </h2>
 
@@ -199,13 +201,13 @@
                                 </div>
 
                             </div>
-                            <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <p class="submain__box-text">Fördelning mellan olika enheter för dina följare. </p>
                         </div>
                         <div class="submain__box-card basta-inlagg">
                             <h6 class="submain__box-title">Bästa inlägg</h6>
                             <h4 id="basta-inlagg" class="submain__box-content">
                             </h4>
-                            <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <p class="submain__box-text">Statistik för ditt bäst presterande inlägg.</p>
                         </div>
 
 
@@ -217,15 +219,16 @@
                             <h6 class="submain__box-title">Geografi</h6>
                             <h6 id="geo" class="submain__box-content">
                             </h6>
-                            <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <p class="submain__box-text">Länder som dina följare kommer ifrån.</p>
                         </div>
 
                         <div class="submain__box-card klick-inlagg">
 
                             <h6 class="submain__box-title">Klick på inlägg</h6>
-                            <h4 id="klick-inlagg" class="submain__box-content ">
-                                </h5>
-                                <p class="submain__box-text">Lorem ipsum dolor sit amet consectetur. </p>
+                            <h4 id="klick-inlagg" class="submain__box-content">
+                            </h4>
+                            <p class="submain__box-text">
+                                Jämfört med föregående 14 dagar. </p>
                         </div>
                     </div>
 
