add animation to count from 0 to final value

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet">
 
   <script src="/js/summary.js" defer></script>
-  <title>Document</title>
+  <title>Viral Vision Dashboard</title>
 </head>
 
 <body>
@@ -133,7 +133,7 @@
     <main class="main">
 
       <div class="main__inner">
-        <h1 class="main__title">Dashboard översikt</h1>
+        <h1 class="main__title">Översikt</h1>
 
         <div class="main__box-container">
 
